--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
   </head>
   <body>
 
-    <div class="header">
-
+    <header class="flex-container">
+      <img class="header-logo" src="./Resources/Images/img-tea-cozy-logo.png" />
+      <nav class="header-nav">
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#shop">Featured Tea</a></span>
+        <span><a href="#locations">Locations</a></span>
+      </nav>
     </div>
 
     <div class="main-content">
 
       <div class="mission">
-        
+
       </div>
 
       <div class="shop">
